2012-08-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.5-1.
	* mingw32/issue.log: Updated accordingly.

2012-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-make.

	* mingw32/mingw32-make.xml: Update to 3.82.90-cvs-20120823-1.
	* mingw32/issue.log: Updated accordingly.

2012-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove redundant package names from description/title attributes.

	* mingw32/mingw32-autoconf.xml mingw32/mingw32-automake.xml:
	* mingw32/mingw32-basic-bsdtar.xml mingw32/mingw32-bzip2.xml:
	* mingw32/mingw32-dos2unix.xml mingw32/mingw32-expat.xml:
	* mingw32/mingw32-gcc-tools.xml mingw32/mingw32-gendef.xml:
	* mingw32/mingw32-gettext.xml mingw32/mingw32-gmp.xml:
	* mingw32/mingw32-libarchive.xml mingw32/mingw32-libiconv.xml:
	* mingw32/mingw32-libtool.xml mingw32/mingw32-make.xml:
	* mingw32/mingw32-mgwport.xml mingw32/mingw32-mingw-utils.xml:
	* mingw32/mingw32-mpc.xml mingw32/mingw32-mpfr.xml:
	* mingw32/mingw32-pexports.xml mingw32/mingw32-popt.xml:
	* mingw32/mingw32-xz.xml mingw32/mingw32-zlib.xml:
	* msys/msys-autoconf.xml msys/msys-autogen.xml msys/msys-automake.xml:
	* msys/msys-bash.xml msys/msys-bison.xml msys/msys-bzip2.xml:
	* msys/msys-console.xml msys/msys-core.xml msys/msys-coreutils.xml:
	* msys/msys-crypt.xml msys/msys-cvs.xml msys/msys-cygutils.xml:
	* msys/msys-dash.xml msys/msys-diffstat.xml msys/msys-diffutils.xml:
	* msys/msys-dos2unix.xml msys/msys-expat.xml msys/msys-file.xml:
	* msys/msys-findutils.xml msys/msys-flex.xml msys/msys-gawk.xml:
	* msys/msys-gdbm.xml msys/msys-gettext.xml msys/msys-gmp.xml:
	* msys/msys-grep.xml msys/msys-groff.xml msys/msys-guile.xml:
	* msys/msys-gzip.xml msys/msys-help2man.xml msys/msys-inetutils.xml:
	* msys/msys-less.xml msys/msys-libarchive.xml msys/msys-libiconv.xml:
	* msys/msys-libtool.xml msys/msys-libxml2.xml msys/msys-lndir.xml: