@@ -44,7 +44,7 @@
   6019ce63b79e768e7c959504fcb5f4b08bf1fa7c 2012073100 mingw32-libiconv.xml
   ccc15973cdc9ff14c12e4385c3e692af1c18b29d 2012073100 mingw32-libtool.xml
   abf16c6e3575585f92c4a88b7be2c1bf6f7e5f26 2012021600 mingw32-lua.xml
-  cb200b0bdaa0736812085238583f558935e718d6 2012082602 mingw32-make.xml
+  95a3b4c21c98a4721692ce1b1da94131b548b103 2012090200 mingw32-make.xml
   71b5ce19cd3f6da57625e75d0e3d7f1bfb4e698c 2012073100 mingw32-mgwport.xml
   8e49b4efd144afdfe5730de463045ee32a57d5e4 2012042600 mingw32-mingw-get.xml
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
