@@ -25,6 +25,9 @@
       <source tarname="make-%-mingw32-%-src.tar.%" />
 
       <component class="bin">
+        <release tarname="make-3.82.90-2-mingw32-cvs-20120902-bin.tar.lzma" >
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
         <release tarname="make-3.82.90-1-mingw32-cvs-20120823-bin.tar.lzma" >
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
         </release>
@@ -37,18 +40,21 @@
       </component>
 
       <component class="doc">
+        <release tarname="make-3.82.90-2-mingw32-cvs-20120902-doc.tar.lzma" />
         <release tarname="make-3.82.90-1-mingw32-cvs-20120823-doc.tar.lzma" />
         <release tarname="make-3.82-5-mingw32-doc.tar.lzma" />
         <release tarname="make-3.82-4-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lic">
+        <release tarname="make-3.82.90-1-mingw32-cvs-20120902-lic.tar.lzma" />
         <release tarname="make-3.82.90-1-mingw32-cvs-20120823-lic.tar.lzma" />
         <release tarname="make-3.82-5-mingw32-doc.tar.lzma" />
         <release tarname="make-3.82-4-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
+        <release tarname="make-3.82.90-1-mingw32-cvs-20120902-lang.tar.lzma" />
         <release tarname="make-3.82.90-1-mingw32-cvs-20120823-lang.tar.lzma" />
         <release tarname="make-3.82-5-mingw32-lang.tar.lzma" />
         <release tarname="make-3.82-4-mingw32-lang.tar.lzma" />
